apps/observability/base/resources/kiali/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-kiali
  namespace: observability
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-kiali
  hostnames:
    - kiali.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
